# midi-cli-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  serve
.github/workflows/: pages.yml
docs/: ai_agent_instructions.md  architecture.md  design.md  mood-config-design.md  native-plugins.md  plan.md  plugins.md  prd.md  research.txt  status.md  usage.md
docs/samples/: index.html
examples/euclidean-mood-plugin/: Cargo.toml  README.md  euclidean.toml
examples/euclidean-mood-plugin/src/: lib.rs
pages/: Cargo.toml  Trunk.toml  examples.json  generate-samples.sh  index.html
pages/abc/: greensleeves.abc  happy_birthday.abc  jingle_bells.abc  ode_to_joy.abc  twinkle.abc
pages/audio/: 8bit-2.mid  8bit-3.mid  abc-happy-birthday.mid  abc-jingle-bells.mid  abc-ode-to-joy.mid  ambient-1.mid  ambient-2.mid  calm-demo.mid  chillout-2.mid  chiptune-3.mid  eerie-1.mid  eerie-2.mid  eerie-demo.mid  euclidean-3.mid  jazz-1.mid  jazz-2.mid  jazz-demo.mid  melody-bass.mid  orchestral-1.mid  orchestral-2.mid  show-2.mid  show-3.mid  suspense-2.mid  suspense-3.mid  synthwave-1.mid  synthwave-2.mid  synthwave-3.mid  techno-3.mid  upbeat-1.mid  upbeat-demo.mid
pages/src/: main.rs
pages/src/components/: abc_example_card.rs  example_card.rs  mod.rs
plugins/: README.md  cinematic.toml  electronic.toml  template.toml
preview/: index.html
scripts/: demo-generate.sh
soundfonts/: README.md
src/: lib.rs  main.rs
src/import/: abc.rs  error.rs  mod.rs  musicxml.rs
src/midi/: mod.rs  note.rs  sequence.rs  writer.rs
src/plugin/: discovery.rs  ffi_types.rs  loader.rs  mod.rs
src/preset/: ambient.rs  calm.rs  chiptune.rs  eerie.rs  jazz.rs  mod.rs  orchestral.rs  show.rs  suspense.rs  upbeat.rs
src/server/: api.rs  mod.rs  state.rs
tests/fixtures/: happy-birthday.abc
web/: Cargo.toml  Trunk.toml  build.rs  index.html
web/src/: api.rs  main.rs
web/src/components/: abc_import.rs  audio_player.rs  melody_editor.rs  melody_list.rs  mod.rs  plugin_manager.rs  preset_editor.rs  preset_list.rs
