[package]
name = "midi-cli-rs"
version = "0.1.0"
edition = "2024"
description = "CLI tool for AI agents to generate MIDI music programmatically"
license = "MIT"
repository = "https://github.com/softwarewrighter/midi-cli-rs"

[[bin]]
name = "midi-cli-rs"
path = "src/main.rs"

[dependencies]
# MIDI generation (MIT/Apache-2.0)
midly = "0.5"

# CLI parsing (MIT/Apache-2.0)
clap = { version = "4", features = ["derive"] }

# Serialization (MIT/Apache-2.0)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling (MIT/Apache-2.0)
thiserror = "1"

# Randomization for presets (MIT/Apache-2.0)
rand = "0.8"

[dev-dependencies]
tempfile = "3"
