[workspace]
exclude = ["web"]

[package]
name = "midi-cli-rs"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
description = "CLI tool for AI agents to generate MIDI music programmatically"
license = "MIT"
repository = "https://github.com/softwarewrighter/midi-cli-rs"
build = "build.rs"

[[bin]]
name = "midi-cli-rs"
path = "src/main.rs"

[features]
default = ["server"]
server = ["axum", "tower", "tower-http", "tokio", "uuid"]

[dependencies]
# MIDI generation (MIT/Apache-2.0)
midly = "0.5"

# CLI parsing (MIT/Apache-2.0)
clap = { version = "4", features = ["derive"] }

# Serialization (MIT/Apache-2.0)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling (MIT/Apache-2.0)
thiserror = "1"

# Randomization for presets (MIT/Apache-2.0)
rand = "0.8"

# Timestamp formatting for version info (MIT/Apache-2.0)
chrono = "0.4"

# Server dependencies (optional, MIT/Apache-2.0)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
tempfile = "3"
