[package]
name = "midi-cli-demo"
version = "0.1.0"
edition = "2021"
authors = ["Michael A Wright"]
description = "Demo page for midi-cli-rs"
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlAudioElement",
    "Window",
    "Navigator",
    "Clipboard",
] }
wasm-bindgen-futures = "0.4"
gloo-timers = "0.3"
