[package]
name = "midi-cli-web"
version = "0.1.0"
edition = "2021"
authors = ["Michael A Wright"]
description = "Web UI for midi-cli-rs"
license = "MIT"
build = "build.rs"

[build-dependencies]
chrono = "0.4"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
gloo-timers = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "HtmlAudioElement",
    "HtmlInputElement",
    "HtmlSelectElement",
] }
